tests/golden/multiple_instances/multiple_instances/multiple_instances/01_gateway_networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: test-instance-02
  namespace: test-instance-02
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: test-instance-02
      microgateway.airlock.com/managedBy: ''
  ingress:
    - fromEntities:
        - world
