tests/golden/multiple_instances/multiple_instances/multiple_instances/01_gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    appuio.ch/waf: airlock
    name: test-instance-01
    openshift.io/cluster-monitoring: 'true'
    vshn.microgateway/redis-sync-secret: 'true'
  name: test-instance-01
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    appuio.ch/waf: airlock
    name: test-instance-02
    openshift.io/cluster-monitoring: 'true'
    vshn.microgateway/redis-sync-secret: 'true'
  name: test-instance-02
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    appuio.ch/waf: airlock
    name: test-instance-overriding-customResponses
    openshift.io/cluster-monitoring: 'true'
    vshn.microgateway/redis-sync-secret: 'true'
  name: test-instance-overriding-customResponses
